# vibe_lights_controller

./: .gitignore  config.toml.example
fpga/hardcaml/: dune-project
fpga/hardcaml/lib/: axi_registers.ml  dune  pixel_buffer.ml  top.ml  ws2812_multi.ml  ws2812_serializer.ml
fpga/hardcaml/test/: dune  test_ws2812.ml
fpga/vivado/constraints/: pynq_z2.xdc
fpga/vivado/scripts/: build.tcl
hardware/: level_shifter.md
software/e131-bridge/: Cargo.toml  Cross.toml  config.toml
software/e131-bridge/src/: config.rs  fpga_io.rs  main.rs  sacn_receiver.rs
software/scripts/: bit_to_bin.py  deploy.sh  fpga_test.py  load_bitstream.sh
